--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -1,16 +1,16 @@
 [trade_symbol]
-symbols_file = custom.txt
+#symbols_file = custom.txt
 #symbols_file = nifty_50.txt
-#symbols_file = nifty_100.txt
+symbols_file = nifty_100.txt
 create_chart = true
 [time_management]
-from_date = 2022-05-13
-to_date = 2024-05-13
+from_date = 2015-01-01
+to_date = 2020-12-31
 
 [risk_management]
 capital = 10000000
 target_percentage = 15
-stop_loss_percentage = 5
+stop_loss_percentage = 25
 
 [house_keeping]
 cleanup_logs = true
