--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -11,9 +11,9 @@ from_date = 2011-01-01
 to_date = 2015-12-31
 
 [risk_management]
-capital = 5000000
-no_of_stock_to_trade = 50
-compound = true
+capital = 1000000
+no_of_stock_to_trade = 5
+compound = false
 target_percentage = 15
 stop_loss_percentage = 25
 
