--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -12,10 +12,11 @@ to_date = 2015-12-31
 
 [risk_management]
 capital = 1000000
-no_of_stock_to_trade = 5
+no_of_stock_to_trade = 10
 compound = false
 target_percentage = 15
 stop_loss_percentage = 25
+charges_percentage = 0.2
 
 [house_keeping]
 cleanup_logs = true
