--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -1,19 +1,19 @@
 [trade_symbol]
 #symbols_file = custom.txt
-symbols_file = nifty_50.txt
-#symbols_file = nifty_100.txt
+#symbols_file = nifty_50.txt
+symbols_file = nifty_100.txt
 #symbols_file = nifty_200.txt
 #symbols_file = nifty_500.txt
 create_chart = false
 
 [time_management]
-from_date = 2011-01-01
-to_date = 2015-12-31
+from_date = 2020-01-01
+to_date = 2021-12-31
 
 [risk_management]
-capital = 1000000
+capital = 3000000
 no_of_stock_to_trade = 10
-compound = false
+compound = true
 target_percentage = 15
 stop_loss_percentage = 25
 charges_percentage = 0.2
