--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -7,8 +7,9 @@ symbols_file = nifty_100.txt
 create_chart = false
 
 [time_management]
-from_date = 2020-01-01
-to_date = 2021-12-31
+from_date = 2022-01-01
+to_date = 2023-12-31
+year_wise = true
 
 [risk_management]
 capital = 3000000
