--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -1,18 +1,18 @@
 [trade_symbol]
-#symbols_file = custom.txt
+symbols_file = custom.txt
 #symbols_file = nifty_50.txt
-symbols_file = nifty_100.txt
+#symbols_file = nifty_100.txt
 #symbols_file = nifty_200.txt
 #symbols_file = nifty_500.txt
 create_chart = false
 
 [time_management]
-from_date = 2022-01-01
-to_date = 2023-12-31
+from_date = 2010-01-01
+to_date = 2024-12-31
 year_wise = true
 
 [risk_management]
-capital = 3000000
+capital = 1000000
 no_of_stock_to_trade = 10
 compound = true
 target_percentage = 15
