--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -1,13 +1,13 @@
 [trade_symbol]
-symbols_file = custom.txt
-#symbols_file = nifty_50.txt
+#symbols_file = custom.txt
+symbols_file = nifty_50.txt
 #symbols_file = nifty_100.txt
 #symbols_file = nifty_200.txt
 #symbols_file = nifty_500.txt
 create_chart = false
 
 [time_management]
-from_date = 2010-01-01
+from_date = 2021-01-01
 to_date = 2024-12-31
 year_wise = true
 
