--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -7,9 +7,9 @@ symbols_file = nifty_100.txt
 create_chart = false
 
 [time_management]
-from_date = 2021-01-01
-to_date = 2024-12-31
-year_wise = true
+from_date = 2015-01-01
+to_date = 2023-12-31
+year_wise = false
 
 [risk_management]
 capital = 1000000
