--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -1,3 +1,4 @@
+
 [trade_symbol]
 #symbols_file = custom.txt
 #symbols_file = nifty_50.txt
@@ -7,15 +8,16 @@ symbols_file = nifty_100.txt
 create_chart = false
 
 [time_management]
-from_date = 2015-01-01
-to_date = 2023-12-31
+from_date = 2016-01-01
+to_date = 2020-12-31
 year_wise = false
+year_
 
 [risk_management]
 capital = 1000000
 no_of_stock_to_trade = 10
 compound = true
-target_percentage = 20
+target_percentage = 15
 stop_loss_percentage = 25
 charges_percentage = 0.2
 
