--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -8,10 +8,10 @@ symbols_file = nifty_100.txt
 create_chart = false
 
 [time_management]
-from_date = 2016-01-01
-to_date = 2020-12-31
-year_wise = false
-year_
+from_date = 2011-01-01
+to_date = 2025-12-31
+year_wise = true
+year_split = 5
 
 [risk_management]
 capital = 1000000
