--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -5,7 +5,7 @@
 symbols_file = nifty_100.txt
 #symbols_file = nifty_200.txt
 #symbols_file = nifty_500.txt
-create_chart = false
+create_chart = true
 
 [time_management]
 from_date = 2011-01-01
