--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -8,9 +8,9 @@ symbols_file = nifty_100.txt
 create_chart = true
 
 [time_management]
-from_date = 2011-01-01
-to_date = 2025-12-31
-year_wise = true
+from_date = 2016-01-01
+to_date = 2020-12-31
+year_wise = false
 year_split = 5
 
 [risk_management]
