--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -1,8 +1,8 @@
 
 [trade_symbol]
-#symbols_file = custom.txt
+symbols_file = custom.txt
 #symbols_file = nifty_50.txt
-symbols_file = nifty_100.txt
+#symbols_file = nifty_100.txt
 #symbols_file = nifty_200.txt
 #symbols_file = nifty_500.txt
 create_chart = true
@@ -17,8 +17,8 @@ year_split = 5
 capital = 1000000
 no_of_stock_to_trade = 10
 compound = true
-target_percentage = 15
-stop_loss_percentage = 25
+target_percentage = 25
+stop_loss_percentage = 15
 charges_percentage = 0.2
 
 [house_keeping]
