--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -1,24 +1,22 @@
 
 [trade_symbol]
-symbols_file = custom.txt
+#symbols_file = custom.txt
 #symbols_file = nifty_50.txt
-#symbols_file = nifty_100.txt
+symbols_file = nifty_100.txt
 #symbols_file = nifty_200.txt
 #symbols_file = nifty_500.txt
 create_chart = true
 
 [time_management]
-from_date = 2016-01-01
-to_date = 2020-12-31
-year_wise = false
-year_split = 5
+from_date = 2019-01-01
+to_date = 2023-12-31
 
 [risk_management]
 capital = 1000000
 no_of_stock_to_trade = 10
 compound = true
-target_percentage = 25
-stop_loss_percentage = 15
+target_percentage = 15
+stop_loss_percentage = 25
 charges_percentage = 0.2
 
 [house_keeping]
