--- a/02.SwingTrade_BackTest/config.cfg
+++ b/02.SwingTrade_BackTest/config.cfg
@@ -1,4 +1,3 @@
-
 [trade_symbol]
 #symbols_file = custom.txt
 #symbols_file = nifty_50.txt
@@ -8,16 +7,30 @@ symbols_file = nifty_100.txt
 create_chart = true
 
 [time_management]
-from_date = 2019-01-01
-to_date = 2023-12-31
+from_date = 2016-01-01
+to_date = 2020-12-31
 
 [risk_management]
-capital = 10000000
+capital = 1000000
 no_of_stock_to_trade = 10
 compound = true
-target_percentage = 25
-stop_loss_percentage = 20
+target_percentage = 15
+stop_loss_percentage = 25
 charges_percentage = 0.2
 
 [house_keeping]
 cleanup_logs = true
+
+[trade_logic]
+#sce_1 =  is_previous_green and yday_50EMA_above_200EMA and yday_close_above_7EMA and pd_rsi_below_n(data, i-2, 14, 40)# and pd_rsi_above_n(data, i-2, 14, 40)
+#sce_2 =  and is_previous_green and yday_100EMA_above_200EMA and six_candle_below_EMA_7 and yday_close_above_7EMA
+#sce_3 =  and is_previous_green and yday_100EMA_above_200EMA and yday_20EMA_below_100EMA and yday_close_above_7EMA# and pd_rsi_below_n(data, i-2, 14, 40)
+#sce_4 =  and is_previous_green and yday_50EMA_above_200EMA and two_candle_avg_below_EMA_7 and yday_close_above_7EMA and pd_rsi_below_n(data, i-2, 14, 50)
+#sce_7 =  and is_previous_green and EMA_50_100_200_UPTREND and yday_20EMA_above_50EMA and yday_close_above_7EMA and macd_buy(data, i-1)
+#sce_8 =  and is_previous_green  and (lowest_low < data.iloc[i - 8]['EMA_200']) and (highest_close > data.iloc[i - 1]['EMA_200']) #and EMA_50_100_200_UPTREND
+#sce_3 =  and is_previous_green and yday_50EMA_above_200EMA and yday_open_below_7EMA and yday_close_above_7EMA
+#sce_4 =  and is_previous_green and yday_50EMA_above_200EMA and yday_open_below_20EMA and yday_close_above_20EMA
+#sce_5 =  and is_previous_green and yday_20EMA_gt_50EMA_gt_100EMA_gt_200EMA and yday_close_above_7EMA
+##sce_2 and pd_rsi_below_n(data, i-2, 14, 50) and pd_rsi_below_n(data, i-5, 14, 35):
+#condition= is_previous_green and yday_50EMA_above_200EMA and two_candle_avg_below_EMA_7 and yday_close_above_7EMA and pd_rsi_below_n(data, i-2, 14, 50)
+condition = EMA_50_100_200_UPTREND and is_previous_green and two_candle_avg_below_EMA_7 and yday_close_above_20EMA
